remove  -XX:MaxPermSize=256m as this property doesn't work anymore in JDK1.8
Change-Id: I6d68bb79801204858cb73407952d38b7a59c26f5